--- a/sothich.html
+++ b/sothich.html
@@ -7,6 +7,7 @@
     <title>Sở Thích Của Bạn</title>
 </head>
 <body>
+    <form>
     <table>
     <th colspan="4">SỞ THÍCH CỦA BẠN</th>
     <tr>
@@ -86,5 +87,6 @@
     </tr>
 
 </table>
+</form>
 </body>
 </html>
