--- a/hienthidaura.html
+++ b/hienthidaura.html
@@ -21,7 +21,7 @@
     <!-- <script>function Messe() {document.write('hello')}</script> -->
     <!-- Hiển thị kết quả hàm console.log() -->
     <button type="button" onclick="show()">Click Me!</button>
-    <script>function show(){console.log("Xin Chào")}</script>
+    <script src="hienthidaura.js"></script>
 </body>
 
 </html>
